tests/NormalTests/paczka1/fuzzy1/36157366.err
Error in line 1: SYnx A693 17,5
Error in line 2: ebmECI8Wl1v A132 31,9
Error in line 8: OkjkThRhv5 A132 36,0
Error in line 5: ebmECI8Wl1v A408 43,3
Error in line 19: j6t3i A693 75,9
Error in line 29: ebmECI8Wl1v A880 33,5
